# GGUF-Surgeon

./: build.gradle.kts  diagnostic.sh  gguf-keystore.jks  gradle.properties  keystore-base64.txt  keystore.properties  settings.gradle.kts
.github/workflows/: build.yml  release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: llama-quantize
app/src/main/assets/python/: gguf_android_bridge.py
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/native/: gguf_bridge.cpp  gguf_bridge.h
app/src/main/java/com/ggufsurgeon/: GGUFSurgeonApp.kt  MainActivity.kt
app/src/main/java/com/ggufsurgeon/core/: GgufBinaryEditor.kt  GgufValidator.kt  NativeGgufMerger.kt  NativeGgufParser.kt  NativeGgufQuantizer.kt
app/src/main/java/com/ggufsurgeon/core/python/: PythonGgufBridge.kt
app/src/main/java/com/ggufsurgeon/data/: ModelRepository.kt
app/src/main/java/com/ggufsurgeon/di/: AppModule.kt
app/src/main/java/com/ggufsurgeon/domain/: ModelFile.kt  OperationResult.kt  TensorInfo.kt
app/src/main/java/com/ggufsurgeon/ui/navigation/: SurgeonNavGraph.kt
app/src/main/java/com/ggufsurgeon/ui/screens/: EditScreen.kt  HomeScreen.kt  MainViewModel.kt  MergeScreen.kt  OptimizeScreen.kt  ViewerScreen.kt
app/src/main/java/com/ggufsurgeon/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
